Fixed noscript on the product and the flower delivery page
Made noscript work on all pages as needed

--- a/_templates/pages/about_us.html
+++ b/_templates/pages/about_us.html
@@ -21,7 +21,7 @@
                 <div class="staffMember">
                     <img src="images/anna_pettersson.jpg" alt="">
                     <p>Anna Pettersson</p>
-                    <p>!!!HORTONOMA!!!</p>
+                    <p>!!!HORTICULTURIST!!!</p>
                 </div>
                 <div class="staffMember">
                     <img src="images/orjan_johansson.jpg" alt="">
