--- a/_templates/pages/products.html
+++ b/_templates/pages/products.html
@@ -21,6 +21,32 @@
             <div class="productsPage">
 
             </div>
+            <noscript>
+                <div class="noscriptContainer">
+                    <div class="fontInter noscriptMessage noscriptMessageWarning">
+                        !!!NOSCRIPT_WARNING!!!
+                    </div>
+                    <div class="fontInter noscriptMessage">
+                        !!!NOSCRIPT_MESSAGE!!!
+                    </div>
+                    <div class="fontInter noscriptMessage">
+                        Tel: <a href="tel:+46630555555" class="textDark">0630 555 555</a><br>
+                        Mail: <a href="mailto:info@github.pages.io" class="textDark">info@github.pages.io</a>
+                    </div>
+                </div>
+                <style>
+                    .dropDown,
+                    header .textLogo,
+                    .sortingOptions,
+                    .productsPage {
+                        display: none;
+                    }
+
+                    .welcomeMessage {
+                        margin-top: -20px;
+                    }
+                </style>
+            </noscript>
         </div>
         !!!FOOTER!!!
     </main>
