--- a/website/about_us_english.html
+++ b/website/about_us_english.html
@@ -53,7 +53,7 @@
                 <div class="staffMember">
                     <img src="images/anna_pettersson.jpg" alt="">
                     <p>Anna Pettersson</p>
-                    <p>Hortologist</p>
+                    <p>Horticulturist</p>
                 </div>
                 <div class="staffMember">
                     <img src="images/orjan_johansson.jpg" alt="">
