--- a/website/flowergram.html
+++ b/website/flowergram.html
@@ -35,7 +35,7 @@
                 <a href="flowergram.html" class="products textMediumSmall textLight fontInter">Blommogram</a>
             </div>
         </div>
-        
+
         <div class="allServices">
             <a href="products.html" class="products textMedium textDark fontProza fontBold">Produkter</a>
             <a href="consultation.html" class="products textMedium textDark fontProza fontBold">Konsultation</a>
@@ -53,112 +53,139 @@
                     <div class="sendFlowersText textMediumSmall fontProza">
                         Skicka blombuketter med vår blommogramtjänst
                     </div>
-                    <input type="text" class="postalCodeInput textSmall fontInter"
-                        placeholder="Postnummer: XXX XX">
+                    <input type="text" class="postalCodeInput textSmall fontInter" placeholder="Postnummer: XXX XX">
                     <div class="postalCodeOutput textSmall fontInter">
                     </div>
                     <input onclick="postalCodeCheck()" type="button" class="confirmButton textSmall fontInter"
                         value="Kolla postnummer">
                     <div class="serviceDescription textSmall fontInter">
-                        Med vår blommogramtjänst kan du enkelt överraska någon med vackra blommor, levererade direkt till dörren. Välj bukett, skriv en personlig hälsning, så sköter vi resten. Perfekt för födelsedagar, högtider eller vardagsglädje.
+                        Med vår blommogramtjänst kan du enkelt överraska någon med vackra blommor, levererade direkt
+                        till dörren. Välj bukett, skriv en personlig hälsning, så sköter vi resten. Perfekt för
+                        födelsedagar, högtider eller vardagsglädje.
                     </div>
                 </div>
             </div>
+            <noscript>
+                <div class="noscriptContainer">
+                    <div class="fontInter noscriptMessage noscriptMessageWarning">
+                        Du har inte javascript aktiverat i din webbläsare.
+                    </div>
+                    <div class="fontInter noscriptMessage">
+                        Kontakta oss för mer information om våra produkter och tjänster.
+                    </div>
+                    <div class="fontInter noscriptMessage">
+                        Tel: <a href="tel:+46630555555" class="textDark">0630 555 555</a><br>
+                        Mail: <a href="mailto:info@github.pages.io" class="textDark">info@github.pages.io</a>
+                    </div>
+                </div>
+                <style>
+                    .dropDown,
+                    header .textLogo,
+                    .servicesPage {
+
+                        display: none;
+                    }
+
+                    .welcomeMessage {
+                        margin-top: -20px;
+                    }
+                </style>
+            </noscript>
         </div>
         <footer class="textSmall textLight fontInter">
-    <div class="openingHoursInfo">
-        <div class="textMedium fontProza fontBold">
-            Öppettider
-        </div>
-        <table class="openingHoursTable">
-            <tbody>
-                <tr>
-                    <td>
-                        Måndag
-                    </td>
-                    <td>
-                        10-16
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Tisdag
-                    </td>
-                    <td>
-                        10-16
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Onsdag
-                    </td>
-                    <td>
-                        12-18
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Torsdag
-                    </td>
-                    <td>
-                        10-16
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Fredag
-                    </td>
-                    <td>
-                        10-16
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Lördag
-                    </td>
-                    <td>
-                        12-15
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Söndag
-                    </td>
-                    <td>
-                        STÄNGT
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-    <div class="divider"></div>
-    <div class="aboutUsInfo">
-        <div class="textMedium fontProza fontBold">
-            Delikat Flora
-        </div>
-        <a href="about_us.html">Om oss</a>
-    </div>
-    <div class="divider"></div>
-    <div class="contactInfo">
-        <div class="textMedium fontProza fontBold">
-            Kontaktinformation
-        </div>
-        <p>
-            <a href="tel:+46630555555">0630 555 555</a>
-        </p>
-        <p>
-            <a href="mailto:info@github.pages.io">info@github.pages.io</a>
-        </p>
-        <p>
-            <a href="https://www.google.com/maps?q=Fjällgatan+32H+981+39+Finspång" target="_blank">
-                Fjällgatan 32H 981 39 Finspång
-            </a>
-        </p>
-        <div class="logo textMediumLarge textLogo">
-            F
-        </div>
-    </div>
-</footer>
+            <div class="openingHoursInfo">
+                <div class="textMedium fontProza fontBold">
+                    Öppettider
+                </div>
+                <table class="openingHoursTable">
+                    <tbody>
+                        <tr>
+                            <td>
+                                Måndag
+                            </td>
+                            <td>
+                                10-16
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Tisdag
+                            </td>
+                            <td>
+                                10-16
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Onsdag
+                            </td>
+                            <td>
+                                12-18
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Torsdag
+                            </td>
+                            <td>
+                                10-16
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Fredag
+                            </td>
+                            <td>
+                                10-16
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Lördag
+                            </td>
+                            <td>
+                                12-15
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Söndag
+                            </td>
+                            <td>
+                                STÄNGT
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="divider"></div>
+            <div class="aboutUsInfo">
+                <div class="textMedium fontProza fontBold">
+                    Delikat Flora
+                </div>
+                <a href="about_us.html">Om oss</a>
+            </div>
+            <div class="divider"></div>
+            <div class="contactInfo">
+                <div class="textMedium fontProza fontBold">
+                    Kontaktinformation
+                </div>
+                <p>
+                    <a href="tel:+46630555555">0630 555 555</a>
+                </p>
+                <p>
+                    <a href="mailto:info@github.pages.io">info@github.pages.io</a>
+                </p>
+                <p>
+                    <a href="https://www.google.com/maps?q=Fjällgatan+32H+981+39+Finspång" target="_blank">
+                        Fjällgatan 32H 981 39 Finspång
+                    </a>
+                </p>
+                <div class="logo textMediumLarge textLogo">
+                    F
+                </div>
+            </div>
+        </footer>
     </main>
     <script type="module" src="./supabase/flower_delivery.js"></script>
     <script src="drop_down_button.js"></script>
