Fixed validator errors
Moved noscript styles to head to fix it

--- a/_templates/pages/index.html
+++ b/_templates/pages/index.html
@@ -6,6 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Delikat Flora</title>
     <link rel="stylesheet" href="style.css">
+    <noscript>
+        <style>
+            .allServices,
+            .dropDown,
+            header .textLogo {
+                display: none;
+            }
+
+            .welcomeMessage {
+                margin-top: -20px;
+            }
+
+            @media screen and (max-width: 900px) {
+                .welcomeMessage {
+                    margin-top: 0px;
+                }
+            }
+        </style>
+    </noscript>
 </head>
 
 <body>
@@ -28,23 +47,6 @@
                         Mail: <a href="mailto:info@github.pages.io" class="textDark">info@github.pages.io</a>
                     </div>
                 </div>
-                <style>
-                    .allServices,
-                    .dropDown,
-                    header .textLogo {
-                        display: none;
-                    }
-
-                    .welcomeMessage {
-                        margin-top: -20px;
-                    }
-
-                    @media screen and (max-width: 900px) {
-                        .welcomeMessage {
-                            margin-top: 0px;
-                        }
-                    }
-                </style>
             </noscript>
         </div>
         !!!FOOTER!!!
