--- a/website/products_english.html
+++ b/website/products_english.html
@@ -6,6 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Products</title>
     <link rel="stylesheet" href="style.css">
+    <noscript>
+        <style>
+            .dropDown,
+            header .textLogo,
+            .sortingOptions,
+            .productsPage {
+                display: none;
+            }
+
+            .welcomeMessage {
+                margin-top: -20px;
+            }
+        </style>
+    </noscript>
 </head>
 
 <body>
@@ -66,18 +80,6 @@
                         Mail: <a href="mailto:info@github.pages.io" class="textDark">info@github.pages.io</a>
                     </div>
                 </div>
-                <style>
-                    .dropDown,
-                    header .textLogo,
-                    .sortingOptions,
-                    .productsPage {
-                        display: none;
-                    }
-
-                    .welcomeMessage {
-                        margin-top: -20px;
-                    }
-                </style>
             </noscript>
         </div>
         <footer class="textSmall textLight fontInter">
