--- a/website/about_us_english.html
+++ b/website/about_us_english.html
@@ -171,7 +171,7 @@
 </footer>
     </main>
     <script src="drop_down_button.js"></script>
-
+<script src="config.js"></script>
 </body>
 
 </html>
