--- a/website/consultation_english.html
+++ b/website/consultation_english.html
@@ -155,7 +155,7 @@
 </footer>
     </main>
     <script src="drop_down_button.js"></script>
-
+<script src="config.js"></script>
 </body>
 
 </html>
