--- a/website/flowergram_english.html
+++ b/website/flowergram_english.html
@@ -189,7 +189,7 @@
     </main>
     <script type="module" src="./supabase/flower_delivery.js"></script>
     <script src="drop_down_button.js"></script>
-
+<script src="config.js"></script>
 </body>
 
 </html>
