--- a/website/index.html
+++ b/website/index.html
@@ -177,7 +177,7 @@
 </footer>
     </main>
     <script src="drop_down_button.js"></script>
-
+<script src="config.js"></script>
 </body>
 
 </html>
