--- a/website/products_english.html
+++ b/website/products_english.html
@@ -184,7 +184,7 @@
         toggleVAT();
     </script>
     <script src="drop_down_button.js"></script>
-
+<script src="config.js"></script>
 </body>
 
 </html>
