Many small fixes
sek -> SEK
Added a space before currency in consultation
Removed unneeded code / commented code
Added transition to postcode check for user information

--- a/website/consultation_english.html
+++ b/website/consultation_english.html
@@ -50,7 +50,7 @@
                         Consultation
                     </div>
                     <div class="priceTag">
-                        250 sek / 30 Minutes
+                        250 SEK / 30 Minutes
                     </div>
                     <img src="images/consultation.jpg" alt="">
                     <div class="serviceDescription">
