Add custom icon and small fixes
A favicon got added and unused images amd attributes got removed.

--- a/_templates/pages/flowergram.html
+++ b/_templates/pages/flowergram.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>!!!FLOWERGRAM_TITLE!!!</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <noscript>
         <style>
             .dropDown,
@@ -38,8 +39,7 @@
                         placeholder="!!!POSTAL_CODE!!!: XXX XX">
                     <div class="postalCodeOutput textSmall fontInter">
                     </div>
-                    <input onclick="postalCodeCheck()" type="button" class="confirmButton textSmall fontInter"
-                        value="!!!CHECK_POSTAL_CODE!!!">
+                    <input type="button" class="confirmButton textSmall fontInter" value="!!!CHECK_POSTAL_CODE!!!">
                     <div class="serviceDescription textSmall fontInter">
                         !!!FLOWERGRAM_DESCRIPTION!!!
                     </div>
