--- a/website/flowergram.html
+++ b/website/flowergram.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blommogram</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <noscript>
         <style>
             .dropDown,
@@ -70,8 +71,7 @@
                         placeholder="Postnummer: XXX XX">
                     <div class="postalCodeOutput textSmall fontInter">
                     </div>
-                    <input onclick="postalCodeCheck()" type="button" class="confirmButton textSmall fontInter"
-                        value="Kolla postnummer">
+                    <input type="button" class="confirmButton textSmall fontInter" value="Kolla postnummer">
                     <div class="serviceDescription textSmall fontInter">
                         Med vår blommogramtjänst kan du enkelt överraska någon med vackra blommor, levererade direkt till dörren. Välj bukett, skriv en personlig hälsning, så sköter vi resten. Perfekt för födelsedagar, högtider eller vardagsglädje.
                     </div>
