--- a/website/flowergram_english.html
+++ b/website/flowergram_english.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flowergram</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <noscript>
         <style>
             .dropDown,
@@ -70,8 +71,7 @@
                         placeholder="Postal code: XXX XX">
                     <div class="postalCodeOutput textSmall fontInter">
                     </div>
-                    <input onclick="postalCodeCheck()" type="button" class="confirmButton textSmall fontInter"
-                        value="Check postal code">
+                    <input type="button" class="confirmButton textSmall fontInter" value="Check postal code">
                     <div class="serviceDescription textSmall fontInter">
                         With our flower delivery service, you can easily surprise someone with beautiful flowers delivered right to their door. Choose a bouquet, write a personal message, and we’ll take care of the rest. Perfect for birthdays, holidays, or everyday joy.
                     </div>
