Made generate_pages find the files automatically
Generate_pages now automatically finds the files and generates the pages, which make adding templates easier

--- a/_templates/pages/flowergram.html
+++ b/_templates/pages/flowergram.html
@@ -63,7 +63,7 @@
         !!!FOOTER!!!
     </main>
     <script type="module" src="./supabase/flower_delivery.js"></script>
-    !!!JS!!!
+    !!!GLOBAL_JS!!!
 </body>
 
 </html>
