--- a/_templates/pages/products.html
+++ b/_templates/pages/products.html
@@ -59,7 +59,7 @@
         createProducts("!!!LANGUAGE!!!");
         toggleVAT();
     </script>
-    !!!JS!!!
+    !!!GLOBAL_JS!!!
 </body>
 
 </html>
